// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should render correctly without props nor session 1`] = `
<div
  id="header"
>
  <div
    id="menuNav"
  >
    <span
      className="menuItem"
    >
      <Link
        tabIndex="-1"
        to="/"
      >
        Home
      </Link>
    </span>
    <span
      className="menuItem"
    >
      <Link
        className="clearSesh"
        onClick={[Function]}
        tabIndex="-1"
        to="/"
      >
        CLEAR
      </Link>
    </span>
  </div>
  <div
    id="spaceNav"
  />
</div>
`;

exports[`Header should render tabs with session storage 1`] = `
<div
  id="header"
>
  <div
    id="menuNav"
  >
    <span
      className="menuItem"
    >
      <Link
        tabIndex="-1"
        to="/"
      >
        Home
      </Link>
    </span>
    <span
      className="menuItem"
    >
      <Link
        className="clearSesh"
        onClick={[Function]}
        tabIndex="-1"
        to="/"
      >
        CLEAR
      </Link>
    </span>
  </div>
  <div
    id="spaceNav"
  >
    <span
      className="spaceNavItem "
      key="1"
    >
      <Link
        className=""
        tabIndex="-1"
        to={
          Object {
            "pathname": "/r/",
            "state": Object {
              "pathname": "/s/",
              "state": Object {
                "space": Object {
                  "id": 1,
                  "name": "space1",
                  "status": true,
                },
              },
            },
          }
        }
      >
        space1
      </Link>
    </span>
    <span
      className="spaceNavItem "
      key="2"
    >
      <Link
        className=""
        tabIndex="-1"
        to={
          Object {
            "pathname": "/r/",
            "state": Object {
              "pathname": "/s/",
              "state": Object {
                "space": Object {
                  "id": 2,
                  "name": "space2",
                  "status": true,
                },
              },
            },
          }
        }
      >
        space2
      </Link>
    </span>
    <span
      className="spaceNavItem "
      key="3"
    >
      <Link
        className=""
        tabIndex="-1"
        to={
          Object {
            "pathname": "/r/",
            "state": Object {
              "pathname": "/s/",
              "state": Object {
                "space": Object {
                  "id": 3,
                  "name": "space3",
                  "status": true,
                },
              },
            },
          }
        }
      >
        space3
      </Link>
    </span>
  </div>
</div>
`;
